--- a/src/Login/loginForm.module.css
+++ b/src/Login/loginForm.module.css
@@ -10,7 +10,8 @@
   align-items: center;
   justify-content: center;
   min-height: 100vh;
-  background-color: #333333;
+  background: rgb(0,0,0);
+  background: linear-gradient(236deg, rgba(0,0,0,1) 2%, rgba(155,155,155,1) 50%, rgba(0,0,0,1) 98%);
   padding: 20px;
 }
 
@@ -46,7 +47,6 @@ label {
 
 p {
   font-weight: bold;
-  margin-bottom: 10px;
   display: block;
   color: white;
   text-align: center;
@@ -68,13 +68,14 @@ input:focus {
 }
 
 button {
+  font-family: 'Times New Roman', Times, serif;
   background-color: #444444;
   color: white;
   padding: 12px;
   border: none;
   border-radius: 5px;
-  margin-bottom: 5px;
-  font-size: 1rem;
+  margin-bottom: 10px;
+  font-size: 1.1rem;
   cursor: pointer;
   transition: background-color 0.3s ease;
 }
@@ -112,6 +113,7 @@ button:hover {
     width: 100%;
     padding: 1.5rem;
     max-width: 350px;
+    min-height: auto;
   }
 
   input {
