--- a/src/Login/loginForm.module.css
+++ b/src/Login/loginForm.module.css
@@ -1,18 +1,12 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
 .container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  min-height: 100vh;
+  min-height: calc(100vh - 56px);
+  margin-top: 56px;
   background: rgb(0,0,0);
   background: linear-gradient(236deg, rgba(0,0,0,1) 2%, rgba(125,125,125,1) 50%, rgba(0,0,0,1) 98%);
-  padding: 20px;
 }
 
 .formWrapper {
@@ -20,9 +14,9 @@
   padding: 2rem;
   border-radius: 8px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-  width: 90%; 
+  width: 100%; 
   max-width: 600px;
-  min-height: 400px; 
+  min-height: 400px;
 }
 
 
@@ -109,10 +103,10 @@ button:hover {
 }
 
 @media (max-width: 600px) {
+  
   .formWrapper {
     width: 100%;
     padding: 1.5rem;
-    max-width: 350px;
     min-height: auto;
   }
 
