--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
-body{
-    font-family: 'Times New Roman', Times, serif;
+html, body{
+    font-family: "Playfair Display", serif !important;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
 }
