--- a/src/Login/loginForm.module.css
+++ b/src/Login/loginForm.module.css
@@ -1,29 +1,38 @@
-.container {
+.logIn .container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   min-height: calc(100vh - 56px);
   margin-top: 56px;
-  background: rgb(0,0,0);
-  background: linear-gradient(236deg, rgba(0,0,0,1) 2%, rgba(125,125,125,1) 50%, rgba(0,0,0,1) 98%);
+  background: radial-gradient(at 50% 50%, hsla(220, 30%, 15%, 1), hsla(220, 30%, 5%, 1));
+  background-repeat: no-repeat;
+  overflow-y: auto;
 }
 
 .formWrapper {
-  background: black;
+  display: flex;
+  flex-direction: column;
+  background: hsla(220, 30%, 10%, 0.9);;
   padding: 2rem;
-  border-radius: 8px;
+  border-radius: 12px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   width: 100%; 
-  max-width: 600px;
+  max-width: 450px;
   min-height: 400px;
+  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.6),
+              0px 15px 35px rgba(0, 0, 0, 0.3);
+  backdrop-filter: blur(10px);
+  border: 1px solid hsla(220, 30%, 40%, 0.3);
+  color: white;
 }
 
 
 h2 {
+  font-size: clamp(2rem, 10vw, 2.15rem);
+  font-weight: bold;
   text-align: center;
-  color: white !important;
-  margin-bottom: 1.5rem;
+  color: white;
 }
 
 
@@ -33,49 +42,54 @@ form {
 }
 
 label {
-  font-weight: bold;
-  margin-bottom: 5px;
   display: block;
-  color: white !important;
+  color: #ddd;
+  margin-top: 5px;
+  margin-bottom: 10px;
 }
 
 p {
-  font-weight: bold;
+  font-size: 13px;
   display: block;
   color: white;
   text-align: center;
 }
 
 input {
+  border-radius: 20px !important;
   width: 100%;
-  padding: 12px;
-  margin-bottom: 1rem;
-  border: 1px solid #ccc;
+  padding: 5px;
+  border: 1px solid #555;
   border-radius: 5px;
   font-size: 1rem;
-  transition: border-color 0.3s ease;
+  background-color: black;
+  color: white;
+  transition: border-color 0.3s ease, background-color 0.3s ease;
 }
 
 input:focus {
-  border-color: #555555;
-  outline: none;
+  box-shadow: 0 0 10px rgba(255, 255, 255, 0.7);
 }
 
-button {
-  font-family: 'Times New Roman', Times, serif !important;
-  background-color: #444444 !important;
+.formWrapper button {
+  font-family: "Playfair Display", serif !important;
+  background-color: hsla(220, 70%, 8%, 1) !important;
   color: white !important;
   padding: 12px !important;
-  border: none !important;
-  border-radius: 5px !important;
-  margin-top: 28px !important;
+  font-size: 1rem;
+  border: 1px solid hsla(220, 70%, 20%, 1);
+  border-radius: 20px !important;
+  margin-top: 16px !important;
   font-size: 1.1rem !important;
   cursor: pointer !important;
-  transition: background-color 0.3s ease !important;
+  margin-bottom: 10px !important;
+  width: 70%;
+  align-self: center;
+  margin-top: 20px !important;
 }
 
 button:hover {
-  background-color: #555555 !important;
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.7);
 }
 
 .message {
@@ -103,11 +117,10 @@ button:hover {
 }
 
 @media (max-width: 600px) {
-  
+
   .formWrapper {
-    width: 100%;
+    width: 90% !important;
     padding: 1.5rem;
-    min-height: auto;
   }
 
   input {
@@ -127,7 +140,6 @@ button:hover {
 
 @media (min-width: 1200px) {
   .formWrapper {
-    max-width: 700px;
     padding: 2.5rem;
   }
 
