--- a/src/Registration/registrationForm.module.css
+++ b/src/Registration/registrationForm.module.css
@@ -6,32 +6,39 @@
 
 .container {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
   min-height: calc(100vh - 56px);
   margin-top: 56px;
-  background: rgb(0,0,0);
-  background: linear-gradient(236deg, rgba(0,0,0,1) 2%, rgba(125,125,125,1) 50%, rgba(0,0,0,1) 98%);
+  position: relative;
+  width: 100%;
+  background: radial-gradient(at 50% 50%, hsla(220, 30%, 15%, 1), hsla(220, 30%, 5%, 1));
+  background-repeat: no-repeat;
+  overflow-y: auto;
 }
 
 .formWrapper {
-  background: black;
+  margin: 20px 0;
+  display: flex;
+  flex-direction: column;
   padding: 2rem;
-  border-radius: 8px;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-  width: 90%; 
-  max-width: 600px;
-  min-height: auto;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  border-radius: 12px;
+  background: hsla(220, 30%, 10%, 0.9);
+  width: 90%;
+  max-width: 450px;
+  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.6),
+              0px 15px 35px rgba(0, 0, 0, 0.3);
+  backdrop-filter: blur(10px);
+  border: 1px solid hsla(220, 30%, 40%, 0.3);
+  color: white;
 }
 
 h2 {
+  font-size: clamp(2rem, 10vw, 2.15rem);
+  font-weight: bold;
   text-align: center;
   color: white;
-  margin-bottom: 1.5rem;
-  font-size: 1.8rem;
+  margin-bottom: 1rem;
 }
 
 .message {
@@ -41,103 +48,84 @@ h2 {
 }
 
 .success {
-  color: green;
+  color: #4CAF50;
 }
 
 .error {
-  color: red;
-}
-
-.formGroup {
-  margin-bottom: 1rem;
-}
-
-label {
-  font-weight: bold;
-  margin-bottom: 5px;
-  display: block;
-  color: white;
+  color: #FF5252;
 }
 
 input {
   width: 100%;
   padding: 12px;
-  border: 1px solid #ccc;
+  border: 1px solid #555;
   border-radius: 5px;
   font-size: 1rem;
-  transition: border-color 0.3s ease;
+  background-color: black;
+  color: white;
+  transition: border-color 0.3s ease, background-color 0.3s ease, box-shadow 0.3s ease;
 }
 
 input:focus {
-  border-color: #555555;
-  outline: none;
+  border: 1px solid white;
+  box-shadow: 0 0 10px rgba(255, 255, 255, 0.7);
 }
 
-.button {
-  font-family: 'Times New Roman', Times, serif;
-  background-color: #444444;
-  color: white;
-  padding: 12px;
-  border: none;
-  margin-bottom: 10px;
-  border-radius: 5px;
+input:hover {
+  border: 1px solid white;
+}
+
+.formWrapper button {
+  font-family: "Playfair Display", serif !important;
+  background-color: hsla(220, 70%, 8%, 1) !important;
+  color: white !important;
+  padding: 12px !important;
   font-size: 1rem;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-  width: 100%;
+  border: 1px solid hsla(220, 70%, 20%, 1);
+  border-radius: 20px !important;
+  margin-top: 16px !important;
+  font-size: 1.1rem !important;
+  cursor: pointer !important;
+  margin-bottom: 10px !important;
+  width: 70%;
+  align-self: center;
+  margin-top: 20px !important;
 }
 
-.button:hover {
-  background-color: #555555;
+.formWrapper button:hover {
+  box-shadow: 0 0 15px rgba(255, 255, 255, 0.8);
 }
 
 .link {
-  color: #bbbbbb; 
+  color: #d3d3d3;
   text-decoration: none;
+  font-weight: bold;
 }
 
 .link:hover {
-  color: white;
   text-decoration: underline;
 }
 
 @media (max-width: 600px) {
   .container {
-    margin-top: 0;
-    height: 100vh; /* Teljes képernyő magasság */
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    overflow: hidden; /* Megakadályozza a kifutást */
+    min-height: calc(100vh - 56px);
   }
 
   .formWrapper {
-    width: 100vw; /* Teljes szélesség */
-    height: 100vh; /* Teljes magasság */
-    max-height: 100vh; /* Ne legyen nagyobb, mint a képernyő */
+    margin: 5%;
     padding: 1.5rem;
-    margin: 0;
     border-radius: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: center; /* Középre igazítja az elemeket */
-    overflow-y: auto; /* Ha nem fér ki, görgethető lesz */
+    overflow-y: auto;
   }
-  
+
   h2 {
-    margin-top: 0; /* Közvetlen a tetejére kerül */
-    padding-top: 1rem; /* Egy kis helyet hagy, hogy ne ragadjon a képernyő tetejére */
-    text-align: center; /* Középre igazítás */
+    margin-top: 0;
+    padding-top: 1rem;
   }
 }
 
-
-
-
-
 @media (min-width: 1200px) {
   .formWrapper {
-    max-width: 700px;
     padding: 2.5rem;
   }
 
@@ -146,12 +134,15 @@ input:focus {
     font-size: 1.1rem;
   }
 
-  .button {
+  button {
     padding: 14px;
     font-size: 1.1rem;
   }
 
   h2 {
-    font-size: 1.5rem;
+    font-size: 2rem;
   }
 }
+
+
+
