--- a/src/Home/Home.module.css
+++ b/src/Home/Home.module.css
@@ -12,6 +12,6 @@
 
 h1{
     font-family: 'Times New Roman', Times, serif;
-    font-size: 100px !important;
-    color: black !important;
+    font-size: 100px;
+    color: black;
 }
